# distroless-python

./: .gitlab-ci.yml  .trivyignore  EXAMPLES.md  README.md  builder.Dockerfile  distroless.Dockerfile  kind.yaml  kind_debug.sh  lib_linker.sh  renovate.json
.github/workflows/: main.yaml  pr.yaml
scripts/: build-builder.sh  build-distroless.sh  publish.sh  scan.sh  tests.sh  vars.sh
stages/: gitlab-templates.yaml  python-3.10-debian11.yaml  python-3.11-debian12.yaml  python-3.12-debian12.yaml  python-3.12-debian13.yaml  python-3.13-debian12.yaml  python-3.13-debian13.yaml  python-3.14-debian13.yaml  python-3.9-debian11.yaml
tests/: test_helper.sh
tests/fastapi/: Dockerfile  Pipfile  app.py  main.py  pyproject.toml  requirements.txt  run.py
tests/google-cloud/: .dockerignore  Dockerfile  Pipfile  README.md  emulator.Dockerfile  main.py  pyproject.toml  requirements.txt  test_google_cloud.sh
tests/gunicorn/: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml  run.py
tests/hello-world/: Dockerfile  hello.py
tests/kubernetes/: .dockerignore  Dockerfile  Pipfile  app.py  k8s.yaml  test_kubernetes.sh
tests/pandas/: Dockerfile  bamboo.py  requirements.txt
