[project]
name = "test-fastapi"
version = "0.1.0"
description = "Simple test of FastAPI app with uv"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.137.2",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.49.0",
]

[tool.uv]
exclude-newer = "3 days"
