[project]
name = "test-fastapi"
version = "0.1.0"
description = "Simple test of FastAPI app with uv"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "typing-extensions>=4.16.0",
    "uvicorn>=0.51.0",
]

[tool.uv]
exclude-newer = "3 days"
