[project]
name = "google-cloud"
version = "0.1.0"
description = "Simple test of google-cloud-pubsub app with uv"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-core>=2.31.0",
    "google-api-python-client>=2.198.0",
    "google-auth>=2.56.0",
    "google-cloud-pubsub>=2.39.0",
]

[tool.uv]
exclude-newer = "3 days"