[tool.poetry]
name = "gunicorn-test"
version = "0.1.0"
description = ""
authors = ["Alex Moss <alex@alexos.dev>"]

[tool.poetry.dependencies]
python = ">=3.9"
Flask = "^2.1.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
