[tool.poetry]
name = "gunicorn-test"
version = "0.1.0"
description = ""
authors = ["Alex Moss <alex@alexos.dev>"]

[tool.poetry.dependencies]
python = ">=3.9"
Flask = "^3.0.0"
gunicorn = "^23.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=2.4.1"]
build-backend = "poetry.core.masonry.api"
